@@ -1,4 +1,7 @@
-/* $Id: changelog,v 1.2725 2004-04-20 10:13:15 sandervl Exp $ */
+/* $Id: changelog,v 1.2726 2004-04-27 08:28:58 sandervl Exp $ */
+
+ 2004-04-27: Andy Willis <abwillis@comcast    >
+    - IMM32:    o Renamed to IMM32OS2
 
  2004-04-19: knut st. osmundsen <bird-changelog@innotek    >
     - USER32:   o Changed some critical sections which weren't initiated to
